--- a/openvidu-testapp/src/app/components/dialogs/other-stream-operations-dialog/other-stream-operations-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/other-stream-operations-dialog/other-stream-operations-dialog.component.css
@@ -7,7 +7,8 @@
     resize: none;
 }
 
-mat-dialog-content button, mat-divider {
+mat-dialog-content button,
+mat-divider {
     margin-bottom: 5px;
 }
 
@@ -26,4 +27,10 @@ mat-dialog-content button {
     font-weight: 400;
     margin-bottom: 5px;
     margin-top: 13px
+}
+
+#clear-response-text-area-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
