openvidu-components: Displayed dialog on PRO features

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/captions/captions.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/captions/captions.component.css
@@ -14,6 +14,14 @@
 	color: var(--ov-text-color);
 }
 
+.pro-feature {
+	text-align: center;
+}
+
+.pro-feture p  {
+	font-size: 14px;
+}
+
 ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
 	background-color: var(--ov-tertiary-color);
 }
