--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/captions/captions.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/captions/captions.component.html
@@ -15,7 +15,7 @@
 		<div id="lang-section">
 			<mat-list-item>
 				<div mat-line>{{ 'PANEL.SETTINGS.LANGUAGE' | translate }}</div>
-				<button mat-flat-button [matMenuTriggerFor]="menu" class="lang-button">
+				<button mat-flat-button [matMenuTriggerFor]="menu" [disabled]="!isSttReady" class="lang-button">
 					<span>{{ langSelected }}</span>
 					<mat-icon>expand_more</mat-icon>
 				</button>
