openvidu-testapp: Updated to Angular 14
ci: Updated testapp building 

openvidu-testapp: Added missing HTTPClient import

openvidu-testapp: Updated circular references stringifying a JSON

--- a/openvidu-testapp/src/app/components/test-scenarios/test-scenarios.component.html
+++ b/openvidu-testapp/src/app/components/test-scenarios/test-scenarios.component.html
@@ -29,6 +29,6 @@
     <button *ngIf="!!textAreaValue && !isFocusedOnReport" id="update-report-btn" class="report-btn" mat-mini-fab color="primary" (click)="$event.stopPropagation(); updateRemoteStreamsInfo()">
       <mat-icon aria-label="Update stream info">replay</mat-icon>
     </button>
-    <textarea matInput readonly [value]="textAreaValue" [mat-autosize]="true" [disabled]="!textAreaValue"></textarea>
+    <textarea matInput readonly [value]="textAreaValue" [disabled]="!textAreaValue"></textarea>
   </mat-form-field>
 </div>
