Add massive session e2e test

--- a/openvidu-testapp/src/app/app.component.html
+++ b/openvidu-testapp/src/app/app.component.html
@@ -2,9 +2,9 @@
   <mat-toolbar class="mat-elevation-z5" color="primary">
     <div layout-align='center center' layout='column'>
       <a id="nav-logo" routerLink="/"><img id="nav-img" src="assets/images/openvidu_vert_white_bg_trans_cropped.png"/> TestApp</a>
-      <a mat-button routerLink="/test-sessions"><span>SESSIONS</span></a>
-      <a mat-button routerLink="/test-scenarios"><span>SCENARIOS</span></a>
-      <a mat-button routerLink="/test-apirest"><span>API REST</span></a>
+      <a mat-button id="toolbar-sessions" routerLink="/test-sessions"><span>SESSIONS</span></a>
+      <a mat-button id="toolbar-scenarios" routerLink="/test-scenarios"><span>SCENARIOS</span></a>
+      <a mat-button id="toolbar-apirest" routerLink="/test-apirest"><span>API REST</span></a>
     </div>
   </mat-toolbar>
   <main>
