openvidu-components: Allowed custom captions lang options

--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -5,6 +5,7 @@
 	[minimal]="_minimal"
 	[lang]="_lang"
 	[captionsLang]="_captionsLang"
+	[captionsLangOptions]="_captionsLangOptions"
 	[prejoin]="_prejoin"
 	[videoMuted]="_videoMuted"
 	[audioMuted]="_audioMuted"
