openvidu-components: Added lang and captionsLang directive tests

--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -3,6 +3,8 @@
 	[participantName]="_participantName"
 	[tokens]="_tokens"
 	[minimal]="_minimal"
+	[lang]="_lang"
+	[captionsLang]="_captionsLang"
 	[prejoin]="_prejoin"
 	[videoMuted]="_videoMuted"
 	[audioMuted]="_audioMuted"
