--- a/openvidu-server/src/dashboard/src/app/components/dashboard/dashboard.component.css
+++ b/openvidu-server/src/dashboard/src/app/components/dashboard/dashboard.component.css
@@ -1,10 +1,34 @@
 #dashboard-div {
   height: 100%;
   padding: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  box-sizing: border-box;
+  column-gap: 20px;
+}
+
+#server-events {
+  flex-basis: 60%;
+}
+
+#server-video {
+  flex-basis: 30%;
+}
+
+.flex-item {
+  flex-grow: 1;
+}
+
+mat-card-header {
+  padding-bottom: 16px;
+}
+
+#toggle-switch {
+  margin-left: 10px;
 }
 
 #log {
-  height: 90%;
+  height: 100%;
 }
 
 #log-content {
@@ -20,6 +44,10 @@ ul {
 
 #test-btn {
   text-transform: uppercase;
+}
+
+mat-card {
+  background: white;
 }
 
 mat-card-title button.blue {
@@ -86,11 +114,47 @@ mat-spinner {
   position: relative;
 }
 
+#msg-chain p:last-child {
+  margin-bottom: 0;
+}
+
+/* >xs */
+@media screen and (min-width: 600px) {
+
+  #dashboard-div {
+    flex-direction: row;
+  }
+
+}
+
+/* xs */
 @media screen and (max-width: 599px) {
-  mat-card-title {
-     font-size: 20px;
+
+  #dashboard-div {
+    flex-direction: column;
+  }
+
+  #server-events {
+    order: 2;
+  }
+
+  #server-video {
+    order: 1;
+    margin-bottom: 20px;
   }
 }
+
+/* sm */
+@media screen and (min-width: 600px) and (max-width: 959px) {}
+
+/* md */
+@media screen and (min-width: 960px) and (max-width: 1279px) {}
+
+/* lg */
+@media screen and (min-width: 1280px) and (max-width: 1919px) {}
+
+/* xl */
+@media screen and (min-width: 1920px) {}
 
 
 /* Pure CSS loader */
@@ -132,6 +196,7 @@ mat-spinner {
   0% {
     -webkit-transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
   }
@@ -141,6 +206,7 @@ mat-spinner {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -165,6 +231,7 @@ mat-spinner {
   0% {
     -webkit-transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(220deg);
   }
@@ -174,6 +241,7 @@ mat-spinner {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(220deg);
   }
@@ -200,9 +268,11 @@ mat-spinner {
   0% {
     -webkit-transform: rotate(-140deg);
   }
+
   50% {
     -webkit-transform: rotate(-160deg);
   }
+
   100% {
     -webkit-transform: rotate(140deg);
   }
@@ -212,9 +282,11 @@ mat-spinner {
   0% {
     transform: rotate(-140deg);
   }
+
   50% {
     transform: rotate(-160deg);
   }
+
   100% {
     transform: rotate(140deg);
   }
