--- a/openvidu-server/src/dashboard/src/styles.css
+++ b/openvidu-server/src/dashboard/src/styles.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   background: #4d4d4d;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0.05);
+  font-family: Roboto,Helvetica Neue,sans-serif;
 }
 
 main {
