--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -1,5 +1,34 @@
 <ov-videoconference
 	[tokens]="tokens"
+	[minimal]="false"
+	[lang]="'en'"
+	[captionsLang]=""
+	[captionsLangOptions]="[{ name: 'Spanish', ISO: 'es-ES' },{ name: 'English', ISO: 'en-US' }]"
+	[prejoin]="false"
+	[participantName]="'Participant'"
+	[videoMuted]="false"
+	[audioMuted]="false"
+	[toolbarScreenshareButton]="true"
+	[toolbarFullscreenButton]="true"
+	[toolbarCaptionsButton]="true"
+	[toolbarRecordingButton]="true"
+	[toolbarStreamingButton]="true"
+	[toolbarBackgroundEffectsButton]="true"
+	[toolbarLeaveButton]="true"
+	[toolbarChatPanelButton]="true"
+	[toolbarParticipantsPanelButton]="true"
+	[toolbarDisplayLogo]="true"
+	[toolbarDisplaySessionName]="true"
+	[streamDisplayParticipantName]="true"
+	[streamDisplayAudioDetection]="true"
+	[streamSettingsButton]="true"
+	[participantPanelItemMuteButton]="true"
+	[activitiesPanelRecordingActivity]="true"
+	[recordingActivityRecordingsList]="recordingList"
+	[recordingActivityRecordingError]="recordingError"
+	[streamingActivityStreamingError]="streamingError"
+	[streamingActivityStreamingInfo]="streamingInfo"
+	[toolbarSettingsButton]="true"
 	(onJoinButtonClicked)="onJoinClicked()"
 	(onToolbarLeaveButtonClicked)="onToolbarLeaveButtonClicked()"
 	(onToolbarCameraButtonClicked)="onToolbarCameraButtonClicked()"
@@ -13,18 +42,14 @@
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked()"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked()"
 	(onActivitiesPanelDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
+	(onActivitiesPanelStartStreamingClicked)="onStartStreamingClicked($event)"
+	(onActivitiesPanelStopStreamingClicked)="onStopStreamingClicked()"
+	(onToolbarStopStreamingClicked)="onStopStreamingClicked()"
 	(onNodeCrashed)="onNodeCrashed()"
-	[minimal]="false"
-	[prejoin]="false"
-	[videoMuted]="false"
-	[audioMuted]="false"
-	[activitiesPanelRecordingActivity]="true"
-	[recordingActivityRecordingsList]="recordingList"
-	[recordingActivityRecordingError]="recordingError"
-	[toolbarSettingsButton]="true"
 >
 	<!-- <div *ovActivitiesPanel>HELLO</div> -->
 
 	<!-- <ov-toolbar *ovToolbar [activitiesPanelButton]="false"
 	[chatPanelButton]="false"></ov-toolbar> -->
+
 </ov-videoconference>
