--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -7,7 +7,12 @@
 				<div *ngIf="recordingStatus === _recordingStatus.STARTED" id="recording-tag" class="recording-tag">
 					<mat-icon class="blink">radio_button_checked</mat-icon>
 					<span class="blink">REC</span>
-					<span> | {{ recordingTime | date: 'H:mm:ss' }}</span>
+					<span> | {{ recordingTime | date : 'H:mm:ss' }}</span>
+				</div>
+				<div *ngIf="streamingStatus === _streamingStatus.STARTED" id="streaming-tag" class="streaming-tag">
+					<mat-icon class="blink">sensors</mat-icon>
+					<span class="blink">LIVE</span>
+					<span> | {{ streamingTime | date : 'H:mm:ss' }}</span>
 				</div>
 			</div>
 		</div>
@@ -114,6 +119,29 @@
 				</span>
 				<span *ngIf="recordingStatus === _recordingStatus.STARTED || recordingStatus === _recordingStatus.STARTING">
 					{{ 'TOOLBAR.STOP_RECORDING' | translate }}
+				</span>
+			</button>
+
+			<!-- Streaming button -->
+			<button
+				*ngIf="!isMinimal && showStreamingButton"
+				mat-menu-item
+				id="streaming-btn"
+				[disabled]="streamingStatus === _streamingStatus.STARTING || recordingStatus === _streamingStatus.STOPPING"
+				(click)="toggleStreaming()"
+			>
+				<mat-icon>sensors</mat-icon>
+				<span
+					*ngIf="
+						streamingStatus === _streamingStatus.STOPPED ||
+						streamingStatus === _streamingStatus.STOPPING ||
+						streamingStatus === _streamingStatus.FAILED
+					"
+				>
+					{{ 'PANEL.STREAMING.START' | translate }}
+				</span>
+				<span *ngIf="streamingStatus === _streamingStatus.STARTED || streamingStatus === _streamingStatus.STARTING">
+					{{ 'PANEL.STREAMING.STOP' | translate }}
 				</span>
 			</button>
 
