--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -11,6 +11,7 @@
 	[audioMuted]="_audioMuted"
 	[toolbarScreenshareButton]="_toolbarScreenshareButton"
 	[toolbarRecordingButton]="_toolbarRecordingButton"
+	[toolbarStreamingButton]="_toolbarStreamingButton"
 	[toolbarFullscreenButton]="_toolbarFullscreenButton"
 	[toolbarBackgroundEffectsButton]="_toolbarBackgroundEffectsButton"
 	[toolbarSettingsButton]="_toolbarSettingsButton"
@@ -26,8 +27,11 @@
 	[streamSettingsButton]="_streamSettingsButton"
 	[participantPanelItemMuteButton]="_participantPanelItemMuteButton"
 	[activitiesPanelRecordingActivity]="_activitiesPanelRecordingActivity"
+	[activitiesPanelStreamingActivity]="_activitiesPanelStreamingActivity"
 	[recordingActivityRecordingsList]="_recordingActivityRecordingsList"
 	[recordingActivityRecordingError]="_recordingActivityRecordingError"
+	[streamingActivityStreamingInfo]="_streamingActivityStreamingInfo"
+	[streamingActivityStreamingError]="_streamingActivityStreamingError"
 	(onJoinButtonClicked)="_onJoinButtonClicked()"
 	(onToolbarLeaveButtonClicked)="_onToolbarLeaveButtonClicked()"
 	(onToolbarCameraButtonClicked)="_onToolbarCameraButtonClicked()"
@@ -39,10 +43,13 @@
 	(onToolbarFullscreenButtonClicked)="_onToolbarFullscreenButtonClicked()"
 	(onToolbarStartRecordingClicked)="onStartRecordingClicked('toolbar')"
 	(onToolbarStopRecordingClicked)="onStopRecordingClicked('toolbar')"
+	(onToolbarStopStreamingClicked)="onStopStreamingClicked('toolbar')"
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked('panel')"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked('panel')"
 	(onActivitiesPanelDownloadRecordingClicked)="_onActivitiesDownloadRecordingClicked($event)"
 	(onActivitiesPanelDeleteRecordingClicked)="_onActivitiesDeleteRecordingClicked($event)"
+	(onActivitiesPanelStartStreamingClicked)="onStartStreamingClicked($event)"
+	(onActivitiesPanelStopStreamingClicked)="onStopStreamingClicked('panel')"
 	(onSessionCreated)="_onSessionCreated($event)"
 	(onParticipantCreated)="_onParticipantCreated($event)"
 ></ov-videoconference>
