openvidu-testapp: fix broken checkboxes after Angular update

--- a/openvidu-testapp/src/app/components/dialogs/publisher-properties-dialog/publisher-properties-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/publisher-properties-dialog/publisher-properties-dialog.component.html
@@ -1,14 +1,14 @@
 <div>
     <h2 mat-dialog-title>Publisher properties</h2>
     <mat-dialog-content>
-        <mat-checkbox (click)="toggleAudio()" [checked]="publisherProperties.audioSource !== false">Audio
+        <mat-checkbox (change)="toggleAudio()" [checked]="publisherProperties.audioSource !== false">Audio
         </mat-checkbox>
-        <mat-checkbox (click)="toggleVideo()" [checked]="publisherProperties.videoSource !== false">Video
+        <mat-checkbox (change)="toggleVideo()" [checked]="publisherProperties.videoSource !== false">Video
         </mat-checkbox>
-        <mat-checkbox [(ngModel)]="publisherProperties.publishAudio" (click)="publisherProperties.publishAudio = !publisherProperties.publishAudio">Publish audio</mat-checkbox>
-        <mat-checkbox [(ngModel)]="publisherProperties.publishVideo" (click)="publisherProperties.publishVideo = !publisherProperties.publishVideo">Publish video</mat-checkbox>
-        <mat-checkbox [(ngModel)]="publisherProperties.mirror" (click)="publisherProperties.mirror = !publisherProperties.mirror">Mirror</mat-checkbox>
-        <mat-checkbox [(ngModel)]="publisherProperties.videoSimulcast" (click)="publisherProperties.videoSimulcast = !publisherProperties.videoSimulcast">Video Simulcast</mat-checkbox>
+        <mat-checkbox [checked]="publisherProperties.publishAudio" (change)="publisherProperties.publishAudio = !publisherProperties.publishAudio">Publish audio</mat-checkbox>
+        <mat-checkbox [checked]="publisherProperties.publishVideo" (change)="publisherProperties.publishVideo = !publisherProperties.publishVideo">Publish video</mat-checkbox>
+        <mat-checkbox [checked]="publisherProperties.mirror" (change)="publisherProperties.mirror = !publisherProperties.mirror">Mirror</mat-checkbox>
+        <mat-checkbox [checked]="publisherProperties.videoSimulcast" (change)="publisherProperties.videoSimulcast = !publisherProperties.videoSimulcast">Video Simulcast</mat-checkbox>
         <mat-divider></mat-divider>
         <mat-form-field>
             <input matInput placeholder="Audio source" [(ngModel)]="audioSource" [disabled]="(publisherProperties.audioSource === false)">
