openvidu-test-e2e: EndReason test

--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -124,6 +124,9 @@
             <button class="message-btn" (click)="sendMessage()" title="Broadcast message">
               <mat-icon aria-label="Send message button" style="font-size: 20px">chat</mat-icon>
             </button>
+            <button class="network-drop-btn" (click)="simulateNetworkDrop()" title="Simulate network drop">
+              <mat-icon aria-label="Simulate network drop button" style="font-size: 20px">wifi_off</mat-icon>
+            </button>
             <button class="leave-btn" (click)="leaveSession()" title="Leave session">
               <mat-icon aria-label="Leave button">clear</mat-icon>
             </button>
